[issue-5394] Fixed alignment issues. (#5395)
* [issue-5394] Fixed alignment issues.

* minor fix

* minor fix

--- a/openmetadata-ui/src/main/resources/ui/src/styles/x-master.css
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/x-master.css
@@ -781,7 +781,7 @@ body .profiler-graph .recharts-active-dot circle {
 #left-panel {
   position: fixed;
   overflow-y: scroll;
-  width: 300px;
+  width: 304px;
   height: calc(100vh - 90px);
 }
 
@@ -819,7 +819,7 @@ body .profiler-graph .recharts-active-dot circle {
   position: relative;
 }
 .page-layout-container.l3-col {
-  grid-template-columns: 300px auto 300px;
+  grid-template-columns: 304px auto 304px;
 }
 .page-layout-container.l2-ltr-col {
   grid-template-columns: 350px auto auto;
@@ -968,7 +968,7 @@ code {
 }
 
 .ant-card-body {
-  padding: 12px;
+  padding: 14px;
 }
 
 .ant-card-head-title {
@@ -985,6 +985,7 @@ code {
 }
 
 .ant-card-head {
+  padding: 0 14px;
   font-size: 14px;
   min-height: 20px;
 }
@@ -992,7 +993,8 @@ code {
 .ant-card-extra {
   padding: 0px;
 }
-
+/* 
+*/
 /* Reaction CSS Start */
 .ant-btn-add-reactions:hover,
 .ant-btn-add-reactions:focus {
@@ -1050,4 +1052,14 @@ code {
 
 .ant-select-single .ant-select-selector .ant-select-selection-search {
   left: 4px;
+}
+
+@media only screen and (max-width: 1440px) {
+  #left-panel {
+    width: 256px;
+  }
+
+  .page-layout-container.l3-col {
+    grid-template-columns: 256px auto 256px;
+  }
 }
